# COMP3400_LA4

./: .clang-tidy  CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  parta.c  partb.c
tests/: parta.bats  parta_deer_output.txt  parta_fox_output.txt  parta_noargs_output.txt  partb.bats  partb_file1_lines_output.txt  partb_file1_words_output.txt  partb_file2_lines_output.txt  partb_file2_words_output.txt  partb_noarg.txt
